# canvas-packages

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
_under-development/github/organization/: infra.yaml
_under-development/github/team/: infra.yaml
gcp/cloud-sql-mysql/: canvas.yaml  output.tf  variables.tf
gcp/cloud-sql-postgresql/: canvas.yaml  main.tf  output.tf
gcp/gke-autopilot/: infra.yaml  main.tf  output.tf  providers.tf  todo.tf  variables.tf
gcp/memorystore-memcache/: canvas.yaml  main.tf  outputs.tf  variables.tf
gcp/memorystore-redis/: canvas.yaml  main.tf  variables.tf
gcp/pubsub/: infra.yaml  main.tf
gcp/storage-bucket/: canvas.yaml  main.tf  outputs.tf
gcp/subnet/: canvas.yaml  infra.yaml  variables.tf
gcp/vpc/: infra.yaml  providers.tf  variables.tf
github/repository/: infra.yaml
rad/app/: canvas.yaml
rad/package/: infra.yaml  variables.tf
scripts/: upload_packages.py
